Se agrego un modal dentro del NavBar (Artistas) y se completaron los titulos de los demas componentes del NavBar

--- a/index.html
+++ b/index.html
@@ -40,18 +40,63 @@
                                                 <div>PINTURA
                                                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                                         <li class="nav-item">
-                                                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                                            <a class="nav-link" href="#">Cubismo</a>
                                                         </li>
                                                         <li class="nav-item">
-                                                            <a class="nav-link" href="#">Link</a>
+                                                            <a class="nav-link" href="#">Abstracta</a>
                                                         </li>
                                                         <li class="nav-item">
-                                                            <a class="nav-link" href="#">Other Link</a>
+                                                            <a class="nav-link" href="#">Impresionismo</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Hiperrealismo</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Arte Pop</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Surrealismo</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Arte urbano</a>
                                                         </li>
                                                     </ul>                                                    
                                                 </div>
-                                                <div>ESCULTURA</div>
-                                                <div>FOTOGRAFIA</div>
+                                                <div>ESCULTURA
+                                                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Metal</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Madera</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Cerámica</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Vidrio</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Otros</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                                <div>FOTOGRAFIA
+                                                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Color</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Blanco y Negro</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Retrato</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" href="#">Naturaleza</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
 
                                             </div>
                                             
@@ -65,21 +110,20 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Artistas</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Jóvenes talentos</a></li>
+                                <li><a class="dropdown-item" href="#">En catálogo</a></li>
+                                <li><a class="dropdown-item" href="#">Mencionados y Premiados</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Other Link</a>
+                            <a class="nav-link" href="#">Quienes somos</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
                 </div>
             </div>
