--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                                 <li><a class="dropdown-item" href="#">Jóvenes talentos</a></li>
                                 <li><a class="dropdown-item" href="#">En catálogo</a></li>
                                 <li><a class="dropdown-item" href="#">Mencionados y Premiados</a></li>
+                                <li><a class="dropdown-item" href="#">Otors artistas recomendados</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
