Se suplantaron las imagenes 2 y 3

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="container">
-                        <img class="inicio-imagen" src="assets/02.svg" alt="...">
+                        <img class="inicio-imagen" src="assets/01.svg" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>2nd slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="container">
-                        <img class="inicio-imagen" src="assets/03.svg" alt="...">
+                        <img class="inicio-imagen" src="assets/01.svg" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>3rd slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
@@ -172,7 +172,7 @@
           </div> 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="pintura">
-              <img src="assets/02.svg" alt="Obra 2">
+              <img src="assets/01.svg" alt="Obra 2">
               <div class="overlay">
                 <h3>Obra 2</h3>
                 <p>Acuarela</p>
@@ -199,7 +199,7 @@
                 </div>
                 <div class="modal-body">
                   <div class="container">
-                    <img class="imagen-modal img-fluid" src="assets/02.svg" alt="Obrablabla">
+                    <img class="imagen-modal img-fluid" src="assets/01.svg" alt="Obrablabla">
                   </div>
                 </div>
                 <div class="modal-footer">
@@ -211,7 +211,7 @@
           </div> 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="pintura">
-              <img src="assets/03.svg" alt="Obra 3">
+              <img src="assets/01.svg" alt="Obra 3">
               <div class="overlay">
                 <h3>Titulo 3</h3>
                 <p>Oleo sobre madera</p>
@@ -238,7 +238,7 @@
                 </div>
                 <div class="modal-body">
                   <div class="container">
-                    <img class="imagen-modal img-fluid" src="assets/03.svg" alt="Obrablabla">
+                    <img class="imagen-modal img-fluid" src="assets/01.svg" alt="Obrablabla">
                   </div>
                 </div>
                 <div class="modal-footer">
@@ -250,7 +250,7 @@
           </div> 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="pintura">
-              <img src="assets/02.svg" alt="Obra 4">
+              <img src="assets/01.svg" alt="Obra 4">
               <div class="overlay">
                 <h3>Pintura 4</h3>
                 <p>Lápiz y crayons</p>
@@ -277,7 +277,7 @@
                 </div>
                 <div class="modal-body">
                   <div class="container">
-                    <img class="imagen-modal img-fluid" src="assets/02.svg" alt="Obrablabla">
+                    <img class="imagen-modal img-fluid" src="assets/01.svg" alt="Obrablabla">
                   </div>
                 </div>
                 <div class="modal-footer">
@@ -289,7 +289,7 @@
           </div> 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="pintura">
-              <img src="assets/03.svg" alt="Obra 5">
+              <img src="assets/01.svg" alt="Obra 5">
               <div class="overlay">
                 <h3>Pintura 5</h3>
                 <p>Técnica mixta sobre cartón</p>
@@ -316,7 +316,7 @@
                 </div>
                 <div class="modal-body">
                   <div class="container">
-                    <img class="imagen-modal img-fluid" src="assets/03.svg" alt="Obrablabla">
+                    <img class="imagen-modal img-fluid" src="assets/01.svg" alt="Obrablabla">
                   </div>
                 </div>
                 <div class="modal-footer">
@@ -418,7 +418,7 @@
             <div class="accordion-item mb-1">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                   <img class="artistas-imagen rounded-circle me-3" src="assets/01.svg" alt="">
-                  <h6>Marina Decolores</h6>
+                  <h6>Marina Descolorida</h6>
                 </button>
               <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
