--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <h2>Pinturas</h2>
       <h4>Estas son algunos de las obras en nuestra galería...</h4>
       <div class="container text-center pinturas-contenedor">
-        <div class="row">
+        <div class="row g-2">
           <div class="col-12 col-md-6 col-lg-4">
             <div class="pintura">
               <img src="assets/01.svg" alt="Obrablabla">
@@ -456,19 +456,160 @@
     <!-- SECCION QUIENES SOMOS -->
 
     <section class="quienessomos">
-        <h1 id="quienessomos">QUIENES SOMOS</h1>
+      <h1 id="quienessomos">QUIENES SOMOS</h1>
+      <div class="container text-center">
+        <div class="row">
+          <div class="mt-2 col-12 col-md-7">
+            <img src="assets/01.svg" alt="">
+          </div>
+          <div class="card mt-2 col-12 col-md-5 pt-2">
+            <h1>NUESTRA MISION</h1>
+            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, laborum deleniti pariatur sit quis eaque, enim ipsum odit doloribus at consequuntur asperiores eligendi veniam sequi explicabo. Ipsam voluptate placeat consequuntur.</P>
+          </div>
+        </div>
+      </div>
+      <div class="container card mt-2 col-12">
+        <H1>NUESTRA TRAYECTORIA</H1>
+        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo non soluta rem repellat animi sed qui quasi laborum deleniti impedit consequuntur magni illum suscipit ratione, ullam voluptatibus quaerat reprehenderit unde!</P>
+      </div>
     </section>
 
     <!-- SECCION CONTACTO -->
 
     <section class="contacto">
         <h1 id="contacto">CONTACTO</h1>
+        <div class="container">
+          <form>
+            <div class="row mb-3">
+              <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="inputEmail3">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control" id="inputPassword3">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <!--span class="input-group-text col-sm-2">With textarea</span-->
+              <label for="textarea" class="col-sm-2 col-form-label">Escríbenos tus sugerencias</label>
+              <div class="col-sm-10">
+                <textarea class="form-control col-sm-10" aria-label="With textarea"></textarea>
+              </div>
+            </div>
+            <div class="row">
+              <div class="btn-group mb-3 col-12 col-md-6 col-lg-3">
+                <button type="button" class="btn btn-primary">Preferencias</button>
+                <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                  <span class="visually-hidden"></span>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                          Preferencia UNO
+                        </label>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                          Preferencia DOS
+                        </label>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                          Preferencia TRES
+                        </label>
+                      </div>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li>
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                          Preferencia CUATRO
+                        </label>
+                      </div>
+                    </li>
+                  </ul>
+                </button>             
+              </div>
+              <div class="btn-group mb-3 col-12 col-md-6 col-lg-3">
+                <button type="button" class="btn btn-primary">Opciones</button>
+                <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                  <span class="visually-hidden"></span>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
+                        <label class="form-check-label" for="gridRadios1">
+                          Opción UNO
+                        </label>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                        <label class="form-check-label" for="gridRadios2">
+                          Opción DOS
+                        </label>
+                      </div>
+                    </li>
+                  </ul>
+                </button>
+              </div>
+              <div class="row mb-3 col-12 col-md-6 col-lg-3">
+                <div class="col-sm-10 offset-sm-2">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck1">
+                    <label class="form-check-label" for="gridCheck1">
+                      <a href="">Acepto términos y condiciones</a>
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <button type="submit" class="btn btn-primary mb-3 col-12 col-md-6 col-lg-3">Enviar correo</button>
+            </div>
+          </form>
+        </div>
     </section>
 
     <!-- SECCION PIE DE PAGINA -->
 
-    <section class="footer">
-        <img src="assets/ST.png" alt="">
+    <section class="pie-de-pagina container-fluid text-white">
+      <div class="container py-3 my-4">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center">
+          <ul class="listafooter1 nav col-12 col-md-4 justify-content-center">
+            <li class="me-3"><i class="bi bi-bootstrap-fill"></i></li>
+            <li>&copy; 1234 Company, Inc</li>
+          </ul>
+          <ul class="nav col-12 col-md-4 justify-content-center">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><p>Home</p></a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><p>Features</p></a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><p>Pricing</p></a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><p>FAQs</p></a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><p>About</p></a></li>
+          </ul>
+          <ul class="listafooter3 nav col-12 col-md-4 list-unstyled justify-content-center">
+            <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-github"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-linkedin"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-twitter-x"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-instagram"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-facebook"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-whatsapp"></i></a></li>
+          </ul> 
+        </footer>
+          <p class="text-center mt-2">Creado por Jane Doe (2024) &#169;</p>
+      </div>
     </section>
 
     <script 
